fix: refine password icon positioning for better alignment

--- a/src/scss/forms/_form-password.scss
+++ b/src/scss/forms/_form-password.scss
@@ -3,7 +3,7 @@
 
 .password-icon {
   position: absolute;
-  top: calc(var(--#{$prefix}form-control-spacing) * 4);
+  top: calc(var(--#{$prefix}form-control-spacing) * 3.75);
   right: var(--#{$prefix}form-control-spacing);
   z-index: 10;
   padding: var(--#{$prefix}spacing-xxs);
